--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,20 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
+
+  packagingOptions {
+    exclude 'META-INF/services/javax.annotation.processing.Processor'
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/NOTICE.txt'
+    exclude 'META-INF/LICENSE'
+  }
+  dataBinding {
+    enabled = true
+  }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
   compileSdkVersion 25
   buildToolsVersion "25.0.2"
   defaultConfig {
@@ -42,7 +56,10 @@ dependencies {
   //Rx
   compile 'io.reactivex:rxjava:1.0.10'
   compile 'io.reactivex:rxandroid:1.0.1'
+  compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
 
   //Dagger
   compile 'com.google.dagger:dagger:2.0'
+  compile 'com.google.dagger:dagger-compiler:2.0'
+  compile 'org.glassfish:javax.annotation:10.0-b28'
 }
