--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,13 @@ dependencies {
   compile 'com.android.support:appcompat-v7:25.1.0'
   compile 'com.android.support:recyclerview-v7:25.1.0'
   compile 'com.android.support:design:25.1.0'
+  compile 'com.android.support:cardview-v7:25.1.0'
 
   // UI
-  compile 'com.facebook.fresco:fresco:0.13.0'
+  compile 'com.github.bumptech.glide:glide:3.7.0'
   compile 'com.jakewharton:butterknife:7.0.1'
-  compile 'com.github.MatteoBattilana:WeatherView:1.1.1'
+  compile 'com.github.10uroi:FontChange:2.0'
+
 
   //Network
   compile 'com.squareup.retrofit2:retrofit:2.1.0'
@@ -62,4 +64,8 @@ dependencies {
   compile 'com.google.dagger:dagger:2.0'
   compile 'com.google.dagger:dagger-compiler:2.0'
   compile 'org.glassfish:javax.annotation:10.0-b28'
+}
+
+repositories {
+  mavenCentral() // jcenter() works as well because it pulls from Maven Central
 }
