--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fire.weatherapp">
 
+  <uses-permission android:name="android.permission.INTERNET"/>
   <application
       android:name=".App"
       android:allowBackup="true"
@@ -9,7 +10,9 @@
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".view.main.MainActivity">
+    <activity
+        android:name=".view.main.MainActivity"
+        android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
